--- a/后台管理/houtai/css/index1.css
+++ b/后台管理/houtai/css/index1.css
@@ -27,14 +27,14 @@ body, div, ul,li,h2, h3, h4,form, input,p,a{
 	height: 25px;
 	cursor: pointer;
 }
-.addMember{
+#addMember,#changeMember{
 	margin-top: 50px;
 	text-align: center;
 }
-.addMember p{
+#addMember p,#changeMember p{
 	margin-top: 20px;
 }
-.addMember p input{
+#addMember p input,#changeMember p input{
 	width: 200px;
 	height: 30px;
 	border-radius: 5px;
@@ -44,7 +44,7 @@ body, div, ul,li,h2, h3, h4,form, input,p,a{
 	width: 100px;
 	height: 20px;
 }
-.addMember p textarea{
+#addMember p textarea,#changeMember p textarea{
 	width: 200px;
 	height: 60px;
 	border-radius: 5px;
@@ -133,7 +133,7 @@ body, div, ul,li,h2, h3, h4,form, input,p,a{
 	border-left: none;
 	background-color: #f2f2f2;
 }
-#search{
+#search,#W_search{
 	width: 200px;
 	height: 20px;
 	border-radius: 3px;
@@ -174,6 +174,60 @@ body, div, ul,li,h2, h3, h4,form, input,p,a{
 	margin-top: 20px;
 	cursor: pointer;
 }
+/*毕业去向分页*/
+.page{
+	width: 100%;
+	height: 35px;
+	display: block;
+	margin-bottom: 60px;
+	margin-top: 30px;
+	text-align: center;
+	position: relative;
+}
+.page_ul{
+	overflow: hidden;
+	display: inline-block;
+}
+.page li{
+	margin: 0;
+	padding: 0;
+	width: 33px;
+	height: 33px;
+	float: left;
+	list-style: none;
+	margin-right: 16px;
+	border: 1px solid #e7e7e7;
+	font-size: 16px;
+	font-weight: bold;
+	color: #666;
+	line-height: 33px;
+	text-align: center;
+	cursor: pointer;
+	font-family: "微软雅黑";
+}
+.page .page_change{
+	border: 1px solid #e7e7e7;
+	font-size: 16px;
+	font-weight: bold;
+	color: #666;
+	line-height: 33px;
+	text-align: center;
+	width: 73px;
+	height: 33px;
+	cursor: pointer;
+}
+.page .page_next{
+	position: absolute;
+	right: 140px;
+}
+.page .page_prev{
+	position: absolute;
+	left: 140px;	
+}
+.page_change:hover,.page li:hover{
+	background-color: #32afcf;
+	color: #fff;
+}
 /*遮罩层*/
 .mask{
 	background-color: #000;
@@ -188,7 +242,21 @@ body, div, ul,li,h2, h3, h4,form, input,p,a{
 	display: none;
 	cursor: pointer;
 }
-
+/*清除浮动*/
+.clear{
+	clear:both
+}
+.clearfix:after{
+	content:".";
+	display:block;
+	height:0;
+	font-size:0;
+	clear:both;
+	visibility:hidden
+}
+.clearfix{
+	zoom:1
+}
 
 
 
