--- a/css/graduate.css
+++ b/css/graduate.css
@@ -3,7 +3,8 @@ body, div, ul,li,h2, h3, h4,form, input,p{
 	padding: 0;	
 	list-style: none;
 }
-.WLF{
+
+#WLF{
 	margin-bottom: 100px;
 	margin-top: 135px;
 }
